--- a/virtualTourist/View/Base.lproj/Main.storyboard
+++ b/virtualTourist/View/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <gestureRecognizers/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="Nwc-9B-LnB"/>
-                                    <outletCollection property="gestureRecognizers" destination="R2f-rL-BOX" appends="YES" id="HWB-vl-jeM"/>
+                                    <outletCollection property="gestureRecognizers" destination="pA6-NJ-FDe" appends="YES" id="GeK-M1-dE8"/>
                                 </connections>
                             </mapView>
                         </subviews>
@@ -41,11 +41,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="R2f-rL-BOX">
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="pA6-NJ-FDe">
                     <connections>
-                        <action selector="userTapped:" destination="BYZ-38-t0r" id="yWT-rs-t61"/>
+                        <action selector="userPressed:" destination="BYZ-38-t0r" id="pH7-pK-iim"/>
                     </connections>
-                </tapGestureRecognizer>
+                </pongPressGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="137.94642857142856"/>
         </scene>
@@ -57,7 +57,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="UWL-ug-DMl">
+                            <stackView opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="UWL-ug-DMl">
                                 <rect key="frame" x="-1" y="88" width="416" height="760"/>
                                 <subviews>
                                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="aXo-Wm-jDl">
@@ -69,7 +69,7 @@
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9sQ-7b-7pb">
                                         <rect key="frame" x="0.0" y="266" width="416" height="460"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="viX-sT-5MG">
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="viX-sT-5MG">
                                             <size key="itemSize" width="159" height="169"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -83,7 +83,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="159" height="169"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ETQ-Er-VFY">
+                                                        <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ETQ-Er-VFY">
                                                             <rect key="frame" x="8" y="0.0" width="151" height="169"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         </imageView>
@@ -97,7 +97,7 @@
                                         </cells>
                                         <connections>
                                             <outlet property="dataSource" destination="19k-ys-d1J" id="1Tf-OW-XoB"/>
-                                            <outlet property="delegate" destination="19k-ys-d1J" id="wVz-Xy-Sdp"/>
+                                            <outlet property="delegate" destination="19k-ys-d1J" id="V6h-Pw-oZm"/>
                                         </connections>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EHr-zg-TAO">
