--- a/virtualTourist/View/Base.lproj/Main.storyboard
+++ b/virtualTourist/View/Base.lproj/Main.storyboard
@@ -79,12 +79,12 @@
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoAlbumCell" id="0Ai-HB-PXP" customClass="VTPhotoAlbumCell" customModule="virtualTourist" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="159" height="169"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="v5c-CA-Jd3" customClass="VTPhotoAlbumCell" customModule="virtualTourist" customModuleProvider="target">
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="v5c-CA-Jd3">
                                                     <rect key="frame" x="0.0" y="0.0" width="159" height="169"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ETQ-Er-VFY">
-                                                            <rect key="frame" x="8" y="0.0" width="151" height="169"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="ETQ-Er-VFY">
+                                                            <rect key="frame" x="-129" y="-146" width="416" height="460"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         </imageView>
                                                     </subviews>
@@ -97,7 +97,7 @@
                                         </cells>
                                         <connections>
                                             <outlet property="dataSource" destination="19k-ys-d1J" id="1Tf-OW-XoB"/>
-                                            <outlet property="delegate" destination="19k-ys-d1J" id="V6h-Pw-oZm"/>
+                                            <outlet property="delegate" destination="19k-ys-d1J" id="hc4-K7-JfM"/>
                                         </connections>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EHr-zg-TAO">
